--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
     <meta name="twitter:description" content="Strategic AI Leadership for Financial Services. Expert AI advisory and implementation for the financial industry." />
     <meta name="twitter:image" content="https://hyperionsoft.com/assets/hero.png" />
     
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-27K8TBMM5H"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-27K8TBMM5H');
+    </script>
+    
     <title>Hyperionsoft - AI Advisory for Financial Services</title>
   </head>
   <body>
